# sys-mon

./: Cargo.toml  README.md  shell.nix  toolchain.toml
assets/: sys-mon.webm
src/: UI.rs  app.rs  events.rs  main.rs  systemstat_example.rs
